make some preparation

--- a/assets/sass/_media.sass
+++ b/assets/sass/_media.sass
@@ -1,4 +1,4 @@
-$sizes: ("xs":470px, "sm":601px, "md":768px, "lg":1024px, "xl":1200px)
+$sizes: ("xs":470px, "sm":601px, "md":768px, "lg":1024px, "xl":1200px, "add1": 922px, "add2": 805px, "add3": 783px)
   
 @mixin media($media)
   @each $size, $resolution in $sizes
