--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -5,3 +5,6 @@
         --accentColor-mod: #d45e7a
         --fontDarkColor: #333333
         --fontLightColor: #FFFFFF
+        --background-mod: #f6f6f6
+        --grad-begin: rgba(0,0,0,.7)
+        --grad-end: rgba(217,217,217,.0)
