--- a/assets/sass/components/header.sass
+++ b/assets/sass/components/header.sass
@@ -4,12 +4,13 @@
   justify-content: space-between
   position: fixed
   width: 1024px
-  z-index: 1
+  z-index: 10
   @include media('lg')
     width: 100svw
     max-width: 100svw
   @include media('md')
-    height: 90px !important
+    height: 70px !important
+    padding: 0 10px
   &__container
     display: flex
     @include media('md')
@@ -17,6 +18,10 @@
       flex-direction: column
   &__logo
     margin-top: 3px
+    margin-left: -2px
+    img 
+      width: auto
+      height: 100%
     span:nth-child(1)
       font-weight: 800
       font-size: 36px
@@ -35,12 +40,15 @@
       padding-right: 23.5px
   &__slogan
     font-size: 18px
-    font-weight: 400
+    font-weight: 600
     align-content: center
     padding-top: 6px
     font-family: 'Open Sans', sans-serif
     font-stretch: condensed
     color: var(--fontDarkColor)
+    padding-left: 22px
+    @include media('md')
+      padding-left: 0px 
   &__fa-menu
     height: 16px
     
