--- a/assets/sass/components/tags.sass
+++ b/assets/sass/components/tags.sass
@@ -2,8 +2,10 @@
   display: flex
   justify-content: start
   flex-wrap: wrap
-  margin: 1.5rem 0
+  margin: 15px 0 1.5rem 0
   gap: 14px
+  &-margin-mod 
+    margin: 1rem 0px
   &__item
     background-color: #EFEFEF
     border-radius: 6px
@@ -14,18 +16,17 @@
     line-height: 38px
     font-family: 'Open Sans', sans-serif
     color: var(--fontDarkColor)
-    &:nth-child(1),
-    &:nth-child(3) 
-      padding: 0px 14px
-    &:nth-child(2) 
-      padding: 0px 11px
-    &-mod 
-    &:nth-child(1)
-      padding: 0px 15px
-    &:nth-child(2) 
-      padding: 0px 12px
-    &:nth-child(3) 
-      padding: 0px 13px
+    // &:nth-child(1),
+    // &:nth-child(3) 
+    //   padding: 0px 14px
+    // &:nth-child(2) 
+    //   padding: 0px 11px
+    // &:nth-child(1)
+    //   padding: 0px 15px
+    // &:nth-child(2) 
+    //   padding: 0px 12px
+    // &:nth-child(3) 
+    //   padding: 0px 13px
     
 
       
