--- a/assets/sass/components/teaser.sass
+++ b/assets/sass/components/teaser.sass
@@ -7,33 +7,68 @@
     width: calc((100% - 2rem) / 3)
     @include media('md')
       width: 100% !important
+    &-margin
+      &-grid
+        margin-bottom: 38px
+        @include media('md')
+          margin-bottom: 0px
+      &-none 
+        margin-bottom: 0px
+      &-mod 
+        margin-bottom: 29px
+        @include media('md')
+          margin-bottom: 0px
+    
+  &__item:nth-child(n+2)
+    @include media('md')
+      display: none
   &__sub-title
     font-weight: 400
     font-size: 18px
     line-height: 28px
     color: var(--accentColor-mod)
+    transition: 0.3s ease all
     @include media('xl')
+      text-wrap: nowrap
       font-size: calc(1.0125rem + .15vw) !important
+    
+    @include media('md')
+      text-wrap: wrap
+      font-size: 18px !important
+    
   &__title
     font-weight: 500
     font-size: 20px
     color: #333333
     line-height: 25px
+    -webkit-line-clamp: 2
+    display: -webkit-box !important
+    -webkit-box-orient: vertical
+    -webkit-line-clamp: 2
+    overflow: hidden
+    text-overflow: ellipsis
     color: var(--fontDarkColor)
     @include media('xl')
       font-size: calc(1.025rem + .3vw) !important
+    
+    // @include media('add1')
+    //   font-size: 16px !important
     @include media('md')
       font-size: calc(1.075rem + .9vw) !important
   &__img
     @include media('md')
       width: 100svw
-      left: -0.5rem
+      left: -10px
       position: relative
-  &__desc
+  &__disc
     font-family: 'Open Sans'
     font-size: 16px
     font-weight: 400
     line-height: 24px
     font-stretch: normal
-    margin: 14px 0 34px -1px
+    margin: 13px 0 0px 0px
     color: var(--fontDarkColor)
+  &-mod-mobile
+    @include media('md')
+      display: none !important
+  
