--- a/assets/sass/components/teaser.sass
+++ b/assets/sass/components/teaser.sass
@@ -48,13 +48,13 @@
     overflow: hidden
     text-overflow: ellipsis
     color: var(--fontDarkColor)
-    @include media('xl')
-      font-size: calc(1.025rem + .3vw) !important
+    
     
     // @include media('add1')
     //   font-size: 16px !important
     @include media('md')
       font-size: calc(1.075rem + .9vw) !important
+      overflow: visible
   &__img
     @include media('md')
       width: 100svw
